# solana-dex-bot

./: Cargo.toml  diesel.toml  rustfmt.toml
crates/bot-api/: Cargo.toml
crates/bot-api/src/: main.rs
crates/bot-api/src/open_telemetry/: mod.rs
crates/bot-api/src/router/: mod.rs  orders.rs  swap.rs  wallet.rs
crates/models/: Cargo.toml
crates/models/src/: hold_coin.rs  lib.rs  schema.rs  wallet.rs
crates/solana/: Cargo.toml
crates/solana-bot/: Cargo.toml
crates/solana-bot/locales/: app.yml
crates/solana-bot/src/: bot.rs  lib.rs  main.rs  trade.rs  user.rs
crates/solana-bot/src/action/: buy.rs  mod.rs
crates/solana-core/: Cargo.toml
crates/solana-core/src/: constants.rs  dexscreen.rs  jito.rs  lib.rs  trade.rs
crates/solana-dex-bot/: Cargo.toml
crates/solana-dex-bot/src/: bot.rs  config.rs  jito.rs  main.rs
crates/solana-trade/: Cargo.toml  build.rs
crates/solana-trade/proto/: trade.proto
crates/solana-trade/src/: config.rs  main.rs  trade.rs
crates/solana/src/: const.rs  lib.rs  wallet.rs
crates/workspace-hack/: Cargo.toml
migrations/2024-06-05-084201_wallets/: up.sql
migrations/2024-06-05-084209_hold_coins/: down.sql  up.sql
migrations/2024-06-20-015738_history/: down.sql  up.sql
src/: schema.rs
