[workspace]
members = ["crates/solana-dex-bot", "crates/workspace-hack"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "env"] }
teloxide = { version = "0.12.2", features = ["full"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
raydium-library = { git = "https://github.com/raydium-io/raydium-library" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
  "no-entrypoint",
] }
anchor-lang = "0.29.0"
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
solana-client = "<1.17.0"
solana-sdk = "<1.17.0"

[replace]
"anchor-lang:0.30.0" = { git = 'https://github.com/coral-xyz/anchor' }
