[workspace]
members = [
  "crates/bot-api",
  "crates/models",
  "crates/solana",
  "crates/solana-dex-bot",
  "crates/workspace-hack",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "env"] }
teloxide = { version = "0.12.2", features = ["full"] }
thiserror = "1.0.61"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
  "no-entrypoint",
] }
anchor-lang = "0.29.0"
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
solana-client = "<1.17.0"
solana-sdk = "<1.17.0"
solana-program = "=1.16.13"
raydium-library = { git = "https://github.com/piotrostr/raydium-library" }
raydium_amm = { git = "https://github.com/piotrostr/raydium-amm", default-features = false, features = [
  "client",
] }
jito-searcher-client = { git = "https://github.com/YusongWang/searcher-examples" }
jito-protos = { git = "https://github.com/YusongWang/searcher-examples" }
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = "0.3"
sentry-tracing = "0.32.3"
diesel = { version = "2.1.6", features = [
  "r2d2",
  "postgres",
  "numeric",
  "serde_json",
  "chrono",
] }
serde_json = "1.0"
serde = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }


[replace]
"anchor-lang:0.30.0" = { git = 'https://github.com/coral-xyz/anchor' }
