[package]
name = "bot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
http = "1.0.0"
tower-http = { version = "0.5.2", features = ["full"] }
tokio = { wrokspace = true }
anyhow = { workspace = true }
diesel = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-stdout = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
sentry-tracing = { workspace = true }
