[package]
name = "solana-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
teloxide = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
raydium-library = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-2022 = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
log = "0.4.21"
env_logger = "=0.9.3"
jito-protos = { workspace = true }
jito-searcher-client = { workspace = true }
solana-core = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-stdout = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
sentry-tracing = { workspace = true }
rust-i18n = "3"
diesel = { workspace = true }
