[package]
name = "solana-bot"
version = "0.1.0"
edition = "2021"


build = "build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
raydium-library = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-2022 = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
log = "0.4.21"
jito-protos = { workspace = true }
jito-searcher-client = { workspace = true }
solana-core = { workspace = true }
models = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
diesel = { workspace = true }
lapin = "2.3.4"
futures = "0.3"
serde = { workspace = true }
tonic = "0.11.0"
prost = "0.12"
prost-types = "0.12"
[build-dependencies]
tonic-build = "0.11.0"
