[package]
name = "solana-dex-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
teloxide = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
raydium-library = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-2022 = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
